* CardConnect: Add frontendid parameter to requests [gcatlin] #3198
* Adyen: Correct formatting of Billing Address [nfarve] #3200
* Stripe: Stripe: Show payment source [jknipp] #3202
* Checkout V2: Checkout V2: Correct success criteria [curiousepic] #3205
* Adyen: Add normalized hash of 3DS 2.0 data fields from web browsers [davidsantoso] #3207

== Version 1.93.0 (April 18, 2019)
* Stripe: Do not consider a refund unsuccessful if only refunding the fee failed [jasonwebster] #3188
* Stripe: Fix webhook creation for connected account [jknipp] #3193
* Adyen: Upgrade to v40 API version [davidsantoso] #3192

== Version 1.92.0 (April 8, 2019)
* BluePay: Send customer IP address when provided [jknipp] #3149
* PaymentExpress: Use ip field for client_info field [jknipp] #3150
* Bambora Asia-Pacific: Adds Store [molbrown] #3147
* Orbital: Pass normalized stored credential fields [curiousepic] #3148
* Adds Elo card type in general and specifically to Adyen [deedeelavinder] #3153
* Mercado Pago: Adds Elo card type [deedeelavinder] #3156
* Litle: Add support for stored credentials [bayprogrammer] #3155
* Adyen: Correctly process risk_data option [bayprogrammer] #3161
* Paymentez: Adds Elo card type [deedeelavinder] #3162
* WorldPay: Adds Elo card type [deedeelavinder] #3163
* Adyen: Idempotency for non-purchase requests [molbrown] #3164
* FirstData e4 v27: Support v28 url and stored creds [curiousepic] #3165
* WorldPay: Fix element order for 3DS + stored cred [bayprogrammer] #3172
* Braintree: Add risk data to returned response [jknipp] #3169
* Adyen: Support idempotency on purchase [molbrown] #3168
* Adyen: Pass phone, statement, device_fingerprint [curiousepic] #3178
* Adyen: Fix adding phone from billing address [curiousepic] #3179
* Fix partial or missing address exceptions [molbrown] #3180
* Adyen: Update to support normalized stored credential fields [molbrown] #3182
* VisaNet Peru: Always include DSC_COD_ACCION [bayprogrammer] #3174